# lab-06-multithreads

./: CMakeLists.txt
include/: HashData.cpp  HashData.h  Hashes.json
sources/: HashData.cpp  main.cpp
tests/: test.cpp
